2003-04-14  Peter Kirchgessner <peter@kirchgessner.net>

	* backend/hp.c, hp-option.c: Check pointers received in
	  sane_control_option(). Caused saned to crash on
	  scanimage --help -d net:localhost:hp:...

2003-04-13  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* doc/sane.man: Added SEE ALSO section.
	* backend/Makefile.in: Fixed warning for dll-preload.c.
	* bakend/dll.c: Add casts to function calls. Without this fix, the
	  dll backend didn't work on the m68k paltform because data and
	  addresses are stored in differnt registers so the return values
	  of the sane api functions were wrong. Patch from Dave Huang
	  <khym@azeotrope.org>. Fixed some compilation warnings.

2003-04-11  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* backend/gt68xx.c backend/gt68xx_devices.c doc/sane-gt68xx.man
	  doc/descriptions/gt68xx.desc doc/gt68xx/gt68xx.CHANGES: Updated
	  Mustek BearPaw 1200 CU Plus white strip value. Set Mustek
	  ScanExpress A3 USB to CCD. Black mark may be still wrong. Minor
	  formatting changes in the manpage.  Decreased ScanExpress A3 USB
	  status to alpha because of CIS/CCD change.
	* backend/ma1509.c: Remove test for multi-pass.
	* doc/sane.man: Added information about #sane IRC
	  channel. Formatting changes.
	* doc/descriptions/unsupported.desc: Added Mustek P 3600 A3 Pro.
	* TODO: Removed license issue. Updated desc files and global
	  variables entries. Updated v4l entry.
	* doc/scanimage.man: --batch format doesn't work, only --batch=format.
	
2003-04-10  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* backend/test.c backend/test.h doc/descriptions/test.desc: Added
	  support for OS/2 (from Franz Bakan <fbakan@gmx.net>).

2003-04-05  Nathan Rutman <nthn1@yahoo.com>

	* backend/canon630u-common.c: Removed last change in offset/gain
	  calculation, which croaked for some cases.  Give up early if we
	  can't talk on the USB. 
	* backend/canon630u.c: Added option to force scanner recalibration.
